[metadata]
name = unifi-cam-proxy
version = 0.0.3
description = Unifi NVR-compatible camera proxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keshavdv/unifi-cam-proxy
author = Keshav Varma
author_email = keshavdv@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7

[options]
packages = find:
install_requires =
    coloredlogs
    requests
    websocket-client
    flvlib
    hikvisionapi
    xmltodict
python_requires = ~=2.7

[options.entry_points]
console_scripts =
    unifi-cam-proxy=unifi.main:main

[bdist_wheel]
universal = True