[metadata]
name = unifi-cam-proxy
version = 0.0.4
description = Unifi NVR-compatible camera proxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keshavdv/unifi-cam-proxy
author = Keshav Varma
author_email = keshavdv@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    backoff
    coloredlogs
    aiohttp
    websockets
    hikvisionapi
    xmltodict
python_requires = >3.7.0

[options.entry_points]
console_scripts =
    unifi-cam-proxy=unifi.main:main

[options.extras_require]
test =
    black
    isort
    pyre-check
    pytest
all =
    %(test)s

[bdist_wheel]
universal = True
