[metadata]
name = unifi-cam-proxy
version = attr: unifi.version.__version__
description = Unifi NVR-compatible camera proxy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keshavdv/unifi-cam-proxy
author = Keshav Varma
author_email = keshavdv@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    aiohttp
    amcrest
    reolinkapi
    packaging
    asyncio-mqtt
    backoff
    coloredlogs
    hikvisionapi >= 0.3.2
    websockets >= 9.0.1
    xmltodict
    pyunifiprotect
    flvlib3 @ git+https://github.com/zkonge/flvlib3.git
python_requires = >3.7.0

[options.entry_points]
console_scripts =
    unifi-cam-proxy=unifi.main:main

[options.extras_require]
test =
    black
    isort
    flake8
    flake8-bugbear
    pyre-check
    pytest
all =
    %(test)s

[bdist_wheel]
universal = True

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = .git,__pycache__,venv,build,dist

